<resources>
    <string name="app_name">Medic</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_skip">Пропустить</string>
    <string name="text_finish">Завершить</string>
    <string name="text_analyzes">Анализы</string>
    <string name="text_notifications">Уведомления</string>
    <string name="text_monitoring">Мониторинг</string>
    <string name="text_analyzes_description">Экспресс сбор и получение проб</string>
    <string name="text_notifications_description">Вы быстро узнаете о результатах</string>
    <string name="text_monitoring_description">Наши врачи всегда наблюдают за вашими показателями здоровья</string>
    <string name="text_welcome">Добро пожаловать!</string>
    <string name="text_welcome_description">Войдите, чтобы пользоваться функциями приложения</string>
    <string name="text_label_e_mail">Вход по E-mail</string>
    <string name="text_next">Далее</string>
    <string name="text_example">example@mail.ru</string>
    <string name="text_or">Или войдите с помощью</string>
    <string name="text_yandex">Войти с Яндекс</string>
    <string name="text_email_code">Введите код из E-mail</string>
    <string name="text_timer">Отправить код повторно можно будет через %s секунд</string>
    <string name="text_create_patient_card">Создание карты\nпациента</string>
    <string name="text_without_card">Без карты пациента вы не сможете заказать анализы.\n\nВ картах пациентов будут храниться результаты анализов вас и ваших близких.</string>
</resources>